plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.5'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'es.deusto.sd'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Starter Web for building web applications
    implementation 'org.springframework.boot:spring-boot-starter-web'

	// SpringDoc OpenAPI UI Dependency this is needed to use Swagger annotations
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
    
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}
